--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,6 +67,32 @@ body {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-slate-100 text-foreground;
+  }
+
+  h1 {
+    @apply text-2xl;
+  }
+
+  h2 {
+    @apply text-xl;
+  }
+
+  h3 {
+    @apply text-lg;
+  }
+}
+
+@layer utilities {
+  .container {
+    @apply max-w-[95%] px-4 mx-auto;
+  }
+
+  .nav-link {
+    @apply content-center h-full font-bold relative text-gray-500 hover:text-purple-500;
+  }
+
+  .active-nav-link {
+    @apply text-purple-500 before:content-[''] before:absolute before:-bottom-1 before:left-0 before:w-full before:h-1 before:rounded-sm before:bg-purple-500;
   }
 }
