--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,4 +95,8 @@ body {
   .active-nav-link {
     @apply text-purple-500 before:content-[''] before:absolute before:-bottom-1 before:left-0 before:w-full before:h-1 before:rounded-sm before:bg-purple-500;
   }
+
+  .dark-gradient-bg{
+    @apply bg-gradient-to-r from-slate-800 to-slate-600;
+  }
 }
