--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,6 +97,6 @@ body {
   }
 
   .dark-gradient-bg{
-    @apply bg-gradient-to-r from-slate-800 to-slate-600;
+    @apply bg-gradient-to-r from-gray-900 to-gray-800;
   }
 }
